bug fixes for flicker

--- a/src/app/component/root/root.component.scss
+++ b/src/app/component/root/root.component.scss
@@ -105,7 +105,7 @@ router-outlet+* {
   align-items: center;
   justify-content: center;
   z-index: 2000 !important;
-  background: rgba(0,0,0,0.3);
+  // background: rgba(0,0,0,0.3);
 }
 
 .loader-container {
